--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Aftab Codes</a>
+      <a class="navbar-brand" href="/AftabCodesBootstrap/">Aftab Codes</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/AftabCodesBootstrap/about.html">About</a>
           </li>
 
 
@@ -50,7 +50,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/AftabCodesBootstrap/contact.html">Contact</a>
           </li>
 
 
